--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Chase Smith",
   "license": "ISC",
   "dependencies": {
+    "ajax": "^0.0.4",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "forever": "^4.0.3",
